objects/Case_Status_Change__e.object
<CustomObject>
    <description>An attempt to see what triggers I can do for Case status changes</description>
    <fields>
        <fullName>CaseID__c</fullName>
        <label>CaseID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Status__c</fullName>
        <label>Old Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Status Change</label>
    <pluralLabel>Case Status Changes</pluralLabel>
</CustomObject>